# sdkwork-dezhou

./: .gitignore  .npmrc  AGENTS.md  CODEX.md  Cargo.toml  GEMINI.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.json
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/game/: dezhou-app-api.openapi.json
apis/backend-api/game/: dezhou-backend-api.openapi.json
apps/: README.md
apps/sdkwork-dezhou-common/: README.md
apps/sdkwork-dezhou-pc/: .env.example  AGENTS.md  README.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  turbo.json  vite.config.ts
apps/sdkwork-dezhou-pc/.sdkwork/: .gitignore  README.md
apps/sdkwork-dezhou-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-dezhou-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-dezhou-pc/specs/: README.md  component.spec.json  dependency.composition.json
apps/sdkwork-dezhou-pc/src/: App.tsx  AppRoutes.tsx  AuthGate.tsx  authGateLogic.ts  index.css
apps/sdkwork-dezhou-pc/tests/: README.md  dezhou-pc-architecture.contract.test.mjs
configs/: README.md  dezhou.database.example.toml  sdkwork-api-cloud-gateway.dezhou.development.toml  sdkwork-api-cloud-gateway.dezhou.production.toml
configs/topology/: README.md  cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.unified-process.development.env
crates/: README.md
crates/sdkwork-api-dezhou-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-api-dezhou-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-dezhou-assembly/src/: bootstrap.rs  generated.rs  lib.rs  web_bootstrap.rs
crates/sdkwork-api-dezhou-standalone-gateway/: Cargo.toml
crates/sdkwork-api-dezhou-standalone-gateway/src/: lib.rs  main.rs
crates/sdkwork-api-dezhou-standalone-gateway/src/bootstrap/: mod.rs  routers.rs
crates/sdkwork-api-dezhou-standalone-gateway/tests/: table_web_framework.rs
crates/sdkwork-dezhou-api-server/: Cargo.toml  build.rs
crates/sdkwork-dezhou-api-server/src/: lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-dezhou-api-server/tests/: table_web_framework.rs
crates/sdkwork-dezhou-database-host/: Cargo.toml
crates/sdkwork-dezhou-database-host/src/: lib.rs
crates/sdkwork-dezhou-gateway-assembly/: Cargo.toml  assembly-manifest.json  build.rs
crates/sdkwork-dezhou-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-dezhou-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-dezhou-service-host/: Cargo.toml
crates/sdkwork-dezhou-service-host/specs/: README.md  component.spec.json
crates/sdkwork-dezhou-service-host/src/: lib.rs
crates/sdkwork-dezhou-standalone-gateway/: Cargo.toml  build.rs
crates/sdkwork-dezhou-standalone-gateway/src/: lib.rs  main.rs  web_bootstrap.rs
crates/sdkwork-dezhou-standalone-gateway/src/bootstrap/: mod.rs  routers.rs
crates/sdkwork-dezhou-standalone-gateway/tests/: table_web_framework.rs
crates/sdkwork-dezhou-table-repository-sqlx/: Cargo.toml
crates/sdkwork-dezhou-table-repository-sqlx/src/: kind.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-dezhou-table-service/: Cargo.toml
crates/sdkwork-dezhou-table-service/src/: lib.rs
crates/sdkwork-dezhou-table-service/src/domain/: models.rs
crates/sdkwork-dezhou-table-service/src/ports/: repository.rs
crates/sdkwork-dezhou-table-service/src/service/: mod.rs
crates/sdkwork-router-health-app-api/: Cargo.toml
crates/sdkwork-router-health-app-api/src/: routes.rs
crates/sdkwork-router-table-app-api/: Cargo.toml
crates/sdkwork-router-table-app-api/src/: error.rs  lib.rs  routes.rs
crates/sdkwork-router-table-backend-api/: Cargo.toml
crates/sdkwork-router-table-backend-api/src/: paths.rs  routes.rs
crates/sdkwork-routes-health-app-api/: Cargo.toml
crates/sdkwork-routes-table-app-api/: Cargo.toml
crates/sdkwork-routes-table-app-api/specs/: component.spec.json
crates/sdkwork-routes-table-app-api/src/: error.rs  paths.rs  routes.rs
crates/sdkwork-routes-table-backend-api/: Cargo.toml
crates/sdkwork-routes-table-backend-api/specs/: component.spec.json
crates/sdkwork-routes-table-backend-api/src/: lib.rs  routes.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/drift/: policy.yaml
database/fixtures/: README.md
database/migrations/postgres/: 0001_dezhou_baseline.up.sql
database/migrations/sqlite/: 0001_dezhou_baseline.down.sql  0001_dezhou_baseline.up.sql
database/seeds/common/: 001_bootstrap.sql
deployments/: README.md
deployments/docker/: Dockerfile.dezhou-api
deployments/templates/: docker-compose.cloud.example.yml  server.env.example
docs/: INDEX.yaml  README.md
docs/product/prd/: PRD.md
etc/: sdkwork-api-cloud-gateway.dezhou.development.toml  sdkwork-api-cloud-gateway.dezhou.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  dezhou-pc-package-naming.test.mjs  dezhou-workspace-boundary.test.mjs  generate-dezhou-sdk.mjs  sdkwork-command.mjs
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-router-health-app-api.route-manifest.json  sdkwork-router-table-app-api.route-manifest.json  sdkwork-routes-health-app-api.route-manifest.json  sdkwork-routes-table-app-api.route-manifest.json
sdks/sdkwork-dezhou-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-dezhou-backend-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/: README.md
tests/contract/: database-framework.contract.test.mjs
tests/fixtures/: README.md
tests/integration/: README.md
tools/: README.md  dezhou_openapi_export.mjs  dezhou_route_manifest_check.mjs  dezhou_sdk_generate.mjs  materialize_dezhou_database_contract.mjs
(+34 files in other folders)
