[workspace]
resolver = "2"
members = [
    "crates/sdkwork-dezhou-standalone-gateway",
    "crates/sdkwork-dezhou-database-host",
    "crates/sdkwork-dezhou-table-service",
    "crates/sdkwork-dezhou-table-repository-sqlx",
    "crates/sdkwork-routes-health-app-api",
    "crates/sdkwork-routes-table-app-api",
    "crates/sdkwork-routes-table-backend-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork_dezhou_standalone_gateway = { package = "sdkwork-dezhou-standalone-gateway", path = "crates/sdkwork-dezhou-standalone-gateway" }
sdkwork_dezhou_database_host = { package = "sdkwork-dezhou-database-host", path = "crates/sdkwork-dezhou-database-host" }
sdkwork_dezhou_table_service = { package = "sdkwork-dezhou-table-service", path = "crates/sdkwork-dezhou-table-service" }
sdkwork_dezhou_table_repository_sqlx = { package = "sdkwork-dezhou-table-repository-sqlx", path = "crates/sdkwork-dezhou-table-repository-sqlx" }
sdkwork_routes_health_app_api = { package = "sdkwork-routes-health-app-api", path = "crates/sdkwork-routes-health-app-api" }
sdkwork_routes_table_app_api = { package = "sdkwork-routes-table-app-api", path = "crates/sdkwork-routes-table-app-api" }
sdkwork_routes_table_backend_api = { package = "sdkwork-routes-table-backend-api", path = "crates/sdkwork-routes-table-backend-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
