[package]
name = "sdkwork-api-dezhou-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-dezhou application HTTP plane."

[lib]
name = "sdkwork_api_dezhou_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_dezhou_service_host.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-routes-table-app-api = { path = "../sdkwork-routes-table-app-api" }
sdkwork-routes-table-backend-api = { path = "../sdkwork-routes-table-backend-api" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
