[package]
name = "sdkwork-api-dezhou-standalone-gateway"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork Dezhou standalone host for the canonical API assembly."

[lib]
path = "src/lib.rs"


[[bin]]
name = "sdkwork-api-dezhou-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
sdkwork_api_dezhou_assembly.workspace = true
sdkwork-web-bootstrap.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util = "0.1"
serde_json.workspace = true
sdkwork_dezhou_table_repository_sqlx.workspace = true
sdkwork_dezhou_table_service.workspace = true
sdkwork_routes_table_app_api.workspace = true
sdkwork-web-core.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
