[package]
name = "sdkwork-dezhou-database-host"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork dezhou database lifecycle host."

[lib]
name = "sdkwork_dezhou_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork_database_config.workspace = true
sdkwork_database_lifecycle.workspace = true
sdkwork_database_spi.workspace = true
sdkwork_database_sqlx.workspace = true
