[package]
name = "sdkwork-dezhou-database-host"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork dezhou database lifecycle host."

[lib]
name = "sdkwork_dezhou_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-lifecycle.workspace = true
sdkwork-database-spi.workspace = true
sdkwork-database-sqlx.workspace = true
