[package]
name = "sdkwork-router-table-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork dezhou table app-api router."

[lib]
name = "sdkwork_router_table_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_dezhou_table_service.workspace = true
sdkwork-web-axum.workspace = true
