[package]
name = "sdkwork-router-table-backend-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork dezhou table backend-api router."

[lib]
name = "sdkwork_router_table_backend_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork_dezhou_table_service.workspace = true
sdkwork_router_table_app_api = { package = "sdkwork-router-table-app-api", path = "../sdkwork-router-table-app-api" }
sdkwork-web-axum.workspace = true
