[package]
name = "sdkwork-routes-table-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork dezhou table app-api router."

[lib]
name = "sdkwork_routes_table_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork_dezhou_table_service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
